--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">EventSync</string>
+<string name="app_name">EventSync</string>
+<string name="google_maps_key">AIzaSyAQzMPUKg8P2YQr2Z2VCHYFseaxzY32kOE</string>
 </resources>
